--- a/NEWS
+++ b/NEWS
@@ -7,3 +7,4 @@
 ## v0.0.3 (on-going) 
  * Concrete Dropout layers
  * Gaussian.loss_function(), which minimizes the negative log-likelihood of a Gaussian distribution.
+ * downscalePredictHidden.keras function to obtain the output of the hidden layers and the kernels (in conv layers)
