changes in some name functions

--- a/NEWS
+++ b/NEWS
@@ -6,5 +6,7 @@
  
 ## v0.0.3 (on-going) 
  * Concrete Dropout layers
- * Gaussian.loss_function(), which minimizes the negative log-likelihood of a Gaussian distribution.
+ * gaussianLoss(), which minimizes the negative log-likelihood of a Gaussian distribution.
  * downscalePredictHidden.keras function to obtain the output of the hidden layers and the kernels (in conv layers)
+ * Function name changed: bernouilliGamma.loss_function --> bernouilliGammaLoss
+ * Function name changed: bernouilliGamma.statistics --> bernouilliGammaStatistics
