--- a/NEWS
+++ b/NEWS
@@ -18,5 +18,8 @@
  * prepareData.keras and prepareNewData.keras now adapted to compute PCs and select nearest neighbours
  * new dependency: downscaleR(>=3.3.2)
  
- ## v1.0.1 (on-going)
+ ## v1.1.0 (22 Jun 2023)
   * Bugs in prepareData.keras, prepareNewData.keras, downscaleCV.keras and downscalePredict.keras --> adapted to single-site
+  
+  
+  
